--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -6,5 +6,6 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>information.qml</file>
+        <file>Adding.qml</file>
     </qresource>
 </RCC>
