basic Information view

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -4,7 +4,8 @@
         <file>Page1Form.qml</file>
         <file>Page2Form.ui.qml</file>
         <file>qtquickcontrols2.conf</file>
-        <file>information.qml</file>
+        <file>Information.qml</file>
         <file>Adding.qml</file>
+        <file>DoubleSpinBox.qml</file>
     </qresource>
 </RCC>
