Base style multi

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -7,5 +7,6 @@
         <file>Information.qml</file>
         <file>Adding.qml</file>
         <file>DoubleSpinBox.qml</file>
+        <file>MultiCalendar.qml</file>
     </qresource>
 </RCC>
