Move Gradient style to stand alone file

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -8,5 +8,6 @@
         <file>Adding.qml</file>
         <file>DoubleSpinBox.qml</file>
         <file>MultiCalendar.qml</file>
+        <file>AccountStyle.qml</file>
     </qresource>
 </RCC>
