--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -9,5 +9,6 @@
         <file>DoubleSpinBox.qml</file>
         <file>MultiCalendar.qml</file>
         <file>AccountStyle.qml</file>
+        <file>CheckEstimated.qml</file>
     </qresource>
 </RCC>
