--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -1,21 +1,21 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>Page1Form.qml</file>
-        <file>Page2Form.qml</file>
+        <file>Core/Main.qml</file>
+        <file>Core/Page1Form.qml</file>
+        <file>Core/Page2Form.qml</file>
         <file>qtquickcontrols2.conf</file>
-        <file>InformationView.qml</file>
-        <file>Adding.qml</file>
-        <file>DoubleSpinBox.qml</file>
-        <file>MultiCalendar.qml</file>
-        <file>AccountStyle.qml</file>
-        <file>CheckEstimated.qml</file>
-        <file>BASKVILL.TTF</file>
-        <file>CASTELAR.TTF</file>
-        <file>Transfert.qml</file>
-        <file>CalendarButton.qml</file>
-        <file>BudgetViewItem.qml</file>
-        <file>BudgetView.qml</file>
-        <file>BudgetManager.qml</file>
+        <file>Core/InformationView.qml</file>
+        <file>Core/Adding.qml</file>
+        <file>Core/DoubleSpinBox.qml</file>
+        <file>Core/MultiCalendar.qml</file>
+        <file>Style/AccountStyle.qml</file>
+        <file>Core/CheckEstimated.qml</file>
+        <file>Style/BASKVILL.TTF</file>
+        <file>Style/CASTELAR.TTF</file>
+        <file>Transfert/Transfert.qml</file>
+        <file>Core/CalendarButton.qml</file>
+        <file>Budget/BudgetViewItem.qml</file>
+        <file>Budget/BudgetView.qml</file>
+        <file>Budget/BudgetManager.qml</file>
     </qresource>
 </RCC>
