--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -18,6 +18,6 @@
         <file>Budget/BudgetView.qml</file>
         <file>Budget/BudgetManager.qml</file>
         <file>Budget/ReferenceView.qml</file>
-        <file>Frequency.qml</file>
+        <file>Frequency/Frequency.qml</file>
     </qresource>
 </RCC>
