[Entry] add frequency metadata

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -20,5 +20,6 @@
         <file>Budget/ReferenceView.qml</file>
         <file>Frequency/Frequency.qml</file>
         <file>Frequency/FrequencyManager.qml</file>
+        <file>Frequency/FrequencyReference.qml</file>
     </qresource>
 </RCC>
