[Frequency] generate function

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -21,5 +21,6 @@
         <file>Frequency/Frequency.qml</file>
         <file>Frequency/FrequencyManager.qml</file>
         <file>Frequency/FrequencyReference.qml</file>
+        <file>Frequency/Generate.qml</file>
     </qresource>
 </RCC>
