[Common] add common expanse file

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -26,5 +26,6 @@
         <file>Core/EntryEdit.qml</file>
         <file>Core/CoreModel.qml</file>
         <file>Core/PageChanger.qml</file>
+        <file>CommonExpanseView.qml</file>
     </qresource>
 </RCC>
