--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -26,6 +26,6 @@
         <file>Core/EntryEdit.qml</file>
         <file>Core/CoreModel.qml</file>
         <file>Core/PageChanger.qml</file>
-        <file>CommonExpanseView.qml</file>
+        <file>CommonExpanse/CommonExpanseView.qml</file>
     </qresource>
 </RCC>
