[App} add icons

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -27,5 +27,6 @@
         <file>Core/CoreModel.qml</file>
         <file>Core/PageChanger.qml</file>
         <file>CommonExpanse/CommonExpanseView.qml</file>
+        <file>Style/tray.png</file>
     </qresource>
 </RCC>
