[QuickAdding] add quick adding window

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -28,5 +28,6 @@
         <file>Core/PageChanger.qml</file>
         <file>CommonExpanse/CommonExpanseView.qml</file>
         <file>Style/tray.png</file>
+        <file>Core/QuickAdding.qml</file>
     </qresource>
 </RCC>
