[MultiProfile] new items

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -29,5 +29,7 @@
         <file>CommonExpanse/CommonExpanseView.qml</file>
         <file>Style/tray.png</file>
         <file>Core/QuickAdding.qml</file>
+        <file>MultiProfile/NewProfile.qml</file>
+        <file>MultiProfile/CheckProfile.qml</file>
     </qresource>
 </RCC>
