[Main] transfert common manager to new file

--- a/Account/View/qml.qrc
+++ b/Account/View/qml.qrc
@@ -30,5 +30,6 @@
         <file>Style/tray.png</file>
         <file>Core/QuickAdding.qml</file>
         <file>MultiProfile/NewProfile.qml</file>
+        <file>CommonExpanse/CommonExpanseManager.qml</file>
     </qresource>
 </RCC>
