[CalendarPage] add new item for zoom calendar

--- a/Account/View/Account.qrc
+++ b/Account/View/Account.qrc
@@ -47,5 +47,6 @@
         <file>Functionnal/PageView.qml</file>
         <file>Graph/CommonGraph.qml</file>
         <file>Functionnal/ZoomCalendar.qml</file>
+        <file>Functionnal/CalendarPage.qml</file>
     </qresource>
 </RCC>
