[Menu] move account to new file

--- a/Account/View/Account.qrc
+++ b/Account/View/Account.qrc
@@ -52,5 +52,6 @@
         <file>Style/AccountMenuButton.qml</file>
         <file>Core/SynchronizationGlobal.qml</file>
         <file>Core/Syncronization.qml</file>
+        <file>Core/AccountMenu.qml</file>
     </qresource>
 </RCC>
