[Debt] add controller and view

--- a/Account/View/Account.qrc
+++ b/Account/View/Account.qrc
@@ -53,5 +53,6 @@
         <file>Core/SynchronizationGlobal.qml</file>
         <file>Core/Syncronization.qml</file>
         <file>Core/AccountMenu.qml</file>
+        <file>Debt/Debt.qml</file>
     </qresource>
 </RCC>
