[EntryTExt] add new view

--- a/Account/View/Account.qrc
+++ b/Account/View/Account.qrc
@@ -54,5 +54,6 @@
         <file>Core/Syncronization.qml</file>
         <file>Core/AccountMenu.qml</file>
         <file>Debt/Debt.qml</file>
+        <file>Core/EntryText.qml</file>
     </qresource>
 </RCC>
